# PraatScripts

./: requirements.txt  setup.cfg
praat_scripts/: get_speech_properties.py
