[metadata]
name = praat_scripts
version = 0.1.0
description = Some praat helpers
long_description = file: README.md
maintainer = Kevin Murphy
maintainer_email = keggsmurph21@gmail.com
url = https://github.com/keggsmurph21/PraatScripts
license = MIT

[options]
package_dir =
  =.
packages = find:
python_requires = >= 3.6
setup_requires =
  setuptools==51.1
install_requires =
  wheel
  docutils
  ipynb
  joblib
  numpy
  pandas
  praat-parselmouth
  praat-scripts
  python-dateutil
  pytz
  scikit-learn
  scipy
  six
  sklearn
  statistics
  threadpoolctl

zip_safe = false
include_package_data = true
